# Ferra-VRM

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/vrm_stage_core/: Cargo.toml
crates/vrm_stage_core/src/: idle.rs  lib.rs  lipsync.rs
docs/: CHARACTER-CARDS.md  SETUP.md
src/: avatar.rs  brain.rs  camera.rs  character.rs  config.rs  main.rs  staging.rs  stt.rs  toast.rs  tts.rs  ui.rs
