[package]
name = "ferra-vrm"
version = "0.2.0"
edition = "2024"
description = "Ferra-VRM — a native-Rust AI VTuber companion. Bring your own LLM and voice."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PNGeon/Ferra-VRM"
authors = ["PNGeon"]
readme = "README.md"

[dependencies]
bevy.workspace = true
bevy_vrm1.workspace = true
vrm_stage_core.workspace = true
bevy_panorbit_camera.workspace = true
bevy_egui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
dirs.workspace = true
toml.workspace = true
rodio.workspace = true
cpal.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true

[workspace]
resolver = "3"
members = ["crates/vrm_stage_core"]

[workspace.dependencies]
# jpeg for VRoid VRMs (which embed JPEG textures — the loader errors without it). ktx2 +
# basis-universal (a heavy C++ basis_universal build, only for optional KTX2 rooms the public app
# doesn't ship) were dropped: they OOM'd the Linux release build to compile an unused feature.
bevy = { version = "0.18", features = ["jpeg"] }
bevy_vrm1 = "0.7.1"
bevy_panorbit_camera = "0.34"
bevy_egui = "0.39.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
dirs = "6"
toml = "1"
rodio = "0.20"
# Microphone capture for speech-to-text (matches rodio's cpal version to avoid a duplicate).
cpal = "0.15"
# Pure-Rust Whisper STT (CPU by default; metal/cuda are opt-in candle features).
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
# Tokenizer load + decode only. `fancy-regex` is the pure-Rust regex backend (vs the C `onig`),
# keeping STT free of C/C++ build deps.
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
vrm_stage_core = { path = "crates/vrm_stage_core" }

# Snappy iteration: our crates lightly optimized, deps fully optimized.
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

# We vendor a lightly-patched bevy_vrm1: upstream 0.7.1 panics on some real-world VRM variants
# (springbone missing `colliderGroups`; expression-based lookAt). The patches degrade those to
# graceful no-ops so the app never crashes on a dropped VRM. See vendor/bevy_vrm1 (PATCH markers).
[patch.crates-io]
bevy_vrm1 = { path = "vendor/bevy_vrm1" }
