[package]
name = "vrm_stage_core"
version = "0.1.0"
edition = "2024"
description = "Shared foundation for native Rust VRM stages — VRM/VRMA load, spring bones, expressions, idle aliveness, lipsync."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PNGeon/Ferra-VRM"
authors = ["PNGeon"]

[dependencies]
bevy.workspace = true
bevy_vrm1.workspace = true
